# sonic

./: Cargo.toml  README.md
.github/workflows/: build.yml  codecov.yml
api/: Cargo.toml
api/src/: alu.rs  api.rs  articles.rs  builders.rs  embedded.rs  issuer.rs  lib.rs  schema.rs  state.rs
api/src/adaptors/: alu.rs  embedded.rs  mod.rs
api/src/for_future/: api.rs
api/src/state/: adaptors.rs  aggregators.rs  arithmetics.rs  data.rs  mod.rs  raw.rs
api/src/util/: annotations.rs  mod.rs  sigs.rs
callreq/: Cargo.toml
callreq/src/: builder.rs  data.rs  lib.rs  uri.rs
cli/: Cargo.toml
cli/src/: cmd.rs  dump.rs  lib.rs  main.rs
doc/: formalism.md
example/: dao.con
examples/: SimpleDAO.schema  VotingCall.yaml  WonderlandDAO.articles  WonderlandDAO.yaml  dao.cdx  dao.codex  dao.con  dao.contract  dao.deed  dao.deeds  dao.rs  voting.deeds
examples/WonderlandDAO.stock/: articles.ste  default.cbor  default.state  raw.state  stash.aolog  stash.idx  stash.raidx  state.cbor  state.raw.yaml  state.yaml  trace.aolog  trace.idx  trace.raidx
examples/dao/: dao.con  main.rs
examples/dao/data/: .gitignore
fsmem/: Cargo.toml
fsmem/src/: lib.rs  state.rs
inmem/: Cargo.toml
inmem/src/: lib.rs  state.rs
persistence/fs/: Cargo.toml
persistence/fs/src/: fs.rs  lib.rs
request/: Cargo.toml
request/src/: data.rs  lib.rs
scripts/: typelib.sh
sonix/: Cargo.toml
sonix/src/: cmd.rs  main.rs
src/: annotations.rs  aora.rs  builders.rs  container.rs  contract.rs  deed.rs  expect.rs  issuer.rs  ledger.rs  lib.rs  main.rs  sigs.rs  state.rs  stl.rs  stock.rs
src/abi/: mod.rs
src/api/: alu.rs  api.rs  embedded.rs  mod.rs  old.rs  state.rs  uni.rs
src/containers/: contract.rs  kit.rs  mod.rs  transfer.rs
src/persistance/: fs.rs  mod.rs
src/persistence/: mod.rs  repo.rs  stash.rs  state.rs  stock.rs  trace.rs
src/util/: mod.rs  refs.rs  sigs.rs  suppl.rs
stl/: SONIC.vesper  SONIC@0.12.0.sta  SONIC@0.12.0.stl  SONIC@0.12.0.sty
tests/: dao.rs  reorgs.rs
url/: Cargo.toml
url/src/: data.rs  lib.rs
