[workspace]
members = [".", "api", "cli", "url"]
default-members = [".", "api", "url"]

[workspace.package]
version = "0.12.0-beta.1"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
repository = "https://github.com/AluVM/sonare"
homepage = "https://ubideco.org/SONARE"
keywords = ["state-machines", "distributed-systems", "decentralized", "partially-replicated", "runtime-environment"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.0" # Due to `rustfix`

[workspace.dependencies]
amplify = "~4.8.0"
strict_encoding = "~2.8.1"
strict_types = "~2.8.1"
aluvm = "0.12.0-beta.3"
ultrasonic = "0.12.0-beta.2"
sonic-api = { version = "0.12.0-beta.1", path = "api" }
hypersonic = { version = "0.12.0-beta.1", path = "." }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"
chrono = "0.4.38"

[package]
name = "hypersonic"
version.workspace = true
authors.workspace = true
description = "Formally-verifiable distributed software"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "compilers"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[lib]
name = "hypersonic"

[[example]]
name = "dao"
required-features = ["persist-file"]

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
strict_types.workspace = true
commit_verify = "0.12.0-beta.1"
aluvm.workspace = true
ultrasonic.workspace = true
sonic-api.workspace = true
indexmap = "2.6.0"
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[features]
default = ["std"]
all = ["stl", "std", "serde", "persist-file"]

std = ["sonic-api/std"]
stl = ["commit_verify/stl", "ultrasonic/stl", "strict_types/armor"]

persist-file = ["std", "serde", "dep:serde_yaml"]
serde = [
    "dep:serde",
    "amplify/serde",
    "strict_encoding/serde",
    "commit_verify/serde",
    "ultrasonic/serde",
    "sonic-api/serde",
    "indexmap/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[patch.crates-io]
ultrasonic = { git = "https://github.com/AluVM/ultrasonic" }
