[workspace]
members = [".", "api", "cli", "callreq"]
default-members = [".", "api", "callreq"]
resolver = "2"

[workspace.package]
version = "0.12.0-beta.6"
authors = ["Dr Maxim Orlovsky <orlovsky@ubideco.org>"]
repository = "https://github.com/AluVM/sonare"
homepage = "https://ubideco.org/SONARE"
keywords = ["state-machines", "distributed-systems", "decentralized", "partially-replicated", "runtime-environment"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82.0" # Due to precise capturing with `use`

[workspace.dependencies]
amplify = "~4.8.1"
strict_encoding = "~2.8.2"
strict_types = "~2.8.3"
commit_verify = "=0.12.0-beta.6"
aluvm = "=0.12.0-beta.6"
ultrasonic = "=0.12.0-beta.6"
sonic-api = { version = "=0.12.0-beta.6", path = "api" }
sonic-callreq = { version = "=0.12.0-beta.6", path = "callreq" }
hypersonic = { version = "=0.12.0-beta.6", path = "." }
aora = ">=0.6.3"
baid64 = "0.4.1"
indexmap = "2.9.0"
chrono = "0.4.38"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.34"

[package]
name = "hypersonic"
version.workspace = true
authors.workspace = true
description = "Formally-verifiable distributed software"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "compilers"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[[bin]]
name = "sonic-stl"
required-features = ["stl"]

[lib]
name = "hypersonic"

[[example]]
name = "dao"
required-features = ["persist-file"]

[[test]]
name = "dao"
required-features = ["persist-file"]

[[test]]
name = "reorgs"
required-features = ["persist-file"]

[dependencies]
amplify = { workspace = true }
strict_encoding.workspace = true
strict_types.workspace = true
commit_verify.workspace = true
aluvm.workspace = true
ultrasonic.workspace = true
sonic-api.workspace = true
sonic-callreq.workspace = true
aora = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
all = ["stl", "std", "serde", "persist-file"]

std = ["sonic-api/std", "sonic-callreq/std"]
stl = ["commit_verify/stl", "ultrasonic/stl", "strict_types/armor"]

persist-file = ["std", "aora"]
serde = [
    "dep:serde",
    "amplify/serde",
    "strict_encoding/serde",
    "commit_verify/serde",
    "ultrasonic/serde",
    "sonic-api/serde",
    "sonic-callreq/serde",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.8.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]
