[package]
name = "sonic-api"
version.workspace = true
authors.workspace = true
description = "API for formally-verifiable distributed contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "science", "no-std"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[lib]
name = "sonicapi"

[dependencies]
amplify.workspace = true
baid64.workspace = true
strict_encoding.workspace = true
strict_types.workspace = true
commit_verify.workspace = true
aluvm.workspace = true
ultrasonic.workspace = true
sonic-callreq.workspace = true
binfile = { workspace = true, optional = true }
indexmap.workspace = true
serde = { workspace = true, optional = true }
chrono.workspace = true

[features]
default = ["std", "binfile"]
all = ["std", "stl", "serde", "binfile"]

std = ["sonic-callreq/std"]
binfile = ["dep:binfile", "std"]
stl = ["commit_verify/stl", "ultrasonic/stl", "strict_types/armor"]
serde = [
    "dep:serde",
    "chrono/serde",
    "amplify/serde",
    "strict_encoding/serde",
    "strict_types/serde",
    "commit_verify/serde",
    "aluvm/serde",
    "ultrasonic/serde",
    "sonic-callreq/serde"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
rand = { version = "0.9.1", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom2 = { package = "getrandom", version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
features = ["all"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
