[package]
name = "sonic-callreq"
version.workspace = true
authors.workspace = true
description = "Structured calls to for SONIC distributed contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "no-std"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
strict_types.workspace = true
baid64.workspace = true
ultrasonic.workspace = true
indexmap = { workspace = true, optional = true }
chrono.workspace = true
fluent-uri = { version = "0.3.2", optional = true }
percent-encoding = { version = "2.3.1", optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
all = ["std", "uri"]

std = ["amplify/std", "indexmap/std", "chrono/std", "fluent-uri/std"]
uri = ["dep:fluent-uri", "dep:percent-encoding", "dep:indexmap"]
serde = ["dep:serde", "strict_types/serde", "amplify/serde", "chrono/serde"]
