[package]
name = "sonix"
description = "Command-line tool for working with SONIC machines and contracts"
categories = ["command-line-utilities", "science"]
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hypersonic = { workspace = true, features = ["serde"] }
sonic-persist-fs.workspace = true
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
serde.workspace = true
serde_yaml.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }
