[package]
name = "sonix"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
amplify.workspace = true
strict_encoding.workspace = true
sonic.workspace = true
serde.workspace = true
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml.workspace = true
