[package]
name = "sonic-url"
version.workspace = true
authors.workspace = true
description = "URL-based request builders and parsers for SONIC distributed contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "no-std"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[dependencies]
amplify.workspace = true
strict_types.workspace = true
ultrasonic = { workspace = true, features = ["serde"] } # TODO: Remove serde feature

[features]
default = ["std"]
all = ["std"]

std = []
