[package]
name = "sonic-call"
version.workspace = true
authors.workspace = true
description = "Structured calls to for SONIC distributed contracts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["algorithms", "cryptography", "science", "no-std"]
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
exclude = [".github"]

[dependencies]
amplify.workspace = true
hypersonic.workspace = true
chrono = "0.4.39"

[features]
default = ["std"]
all = ["std", "url"]

std = []
url = []
